fix bug -- give z-index to the nav component to make it stay on top

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,7 @@ hr {
 /* nav section*/
 
 .nav {
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
